# Movie-Recommendation-Engine

./: .gitignore  pyproject.toml  train.py
api/: main.py  routes.py  schema.py  service.py
data/: downloader.py  loader.py
env/: simulator.py
models/: bandit.py  dqn.py
scripts/: train_dqn.py
tests/: test_loader.py
