[project]
name = "movie-recomend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn",
    "pandas",
    "numpy",
    "torch",
    "scikit-learn",
]

    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "torch>=2.11.0",
    "uvicorn>=0.44.0",
]
